--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -58,6 +58,10 @@
   "C_Cpp_Runner.msvcSecureNoWarnings": false,
   "files.associations": {
     "findfunctions.h": "c",
-    "stdio.h": "c"
+    "stdio.h": "c",
+    "validcheck.h": "c",
+    "stock.h": "c",
+    "backupfunction.h": "c",
+    "menu.h": "c"
   }
 }
